# app/Http/Resources/OrderItemResource.php
@@ -1,0 +1,20 @@
+<?php
+
+namespace App\Http\Resources;
+
+use Illuminate\Http\Request;
+use Illuminate\Http\Resources\Json\JsonResource;
+
+class OrderItemResource extends JsonResource
+{
+    public function toArray($request)
+    {
+        return [
+            'quantity' => $this->quantity,
+            'product' => [
+                'name' => $this->product->name,
+                'price' => $this->product->price
+            ]
+        ];
+    }
+}
