# routes/cms/admin_orders.php
@@ -7,6 +7,7 @@ Route::prefix('orders')->group(function () {
   // Product Routes (Admin có toàn quyền)
   Route::get('/', [OrderControllerV2::class, 'index'])->name('cms.order.index');
   Route::post('/create', [OrderControllerV2::class, 'store'])->name('cms.order.store');
-  // Route::put('/update/{id}', [ProductController::class, 'update'])->name('cms.products.update');
-  // Route::delete('/delete/{id}', [ProductController::class, 'destroy'])->name('cms.products.destroy');
+  Route::put('/update/{id}', [OrderControllerV2::class, 'update'])->name('cms.products.update');
+  Route::delete('/delete/{id}', [OrderControllerV2::class, 'destroy'])->name('cms.products.destroy');
+  // Route::apiResource('/', OrderControllerV2::class);
 });
